<resources>
    <string name="app_name">PawPal2</string>
    <string name="selamat_datang_kembali">Selamat Datang Kembali!</string>
    <string name="kami_merindukanmu">Kami merindukanmu dan juga anabul kesayanganmu! Masuk untuk melanjutkan perawatan terbaik bagi hewan peliharaanmu.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="log_in">Log In</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="google">Google</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang"> Daftar Sekarang</string>
    <string name="lihat_password">Lihat password</string>
    <string name="bergabung_bersama_kami">Bergabung Bersama Kami!</string>
    <string name="buat_akun_nikmati_layanan">Buat akun dan nikmati berbagai layanan untuk hewan peliharaanmu, mulai dari belanja kebutuhan, booking grooming &amp; dokter hewan, hingga adopsi hewan dengan mudah.</string>
    <string name="nama_pertama">Nama pertama</string>
    <string name="nama_terakhir">Nama terakhir</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="_log_in"> Log In</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="dirtycat">DirtyCat</string>
    <string name="notifications">Notifications</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="katalog">Katalog</string>
    <string name="search_hint">Cari…</string>
    <string name="kategori">Kategori</string>
    <string name="product_image">Product Image</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="rating_star">Rating Star</string>
    <string name="home">Home</string>
    <string name="paw">Paw</string>
    <string name="gift">Gift</string>
    <string name="heart">Heart</string>
    <string name="user">User</string>
    <string name="category_all">Semua</string>
    <string name="category_body_care">Perawatan Tubuh</string>
    <string name="category_accessories">Aksesori &amp; Kenyamanan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="notification_image">Gambar Notifikasi</string>
    <string name="beri_penilaian">Beri Penilaian</string>
    <string name="nilai_produk_title">Nilai Produk</string>
    <string name="komentar_anda">Komentar Anda</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="simpan_penilaian">Simpan Penilaian</string>
    <string name="product_image_description">Gambar Produk</string>
    <string name="detail_produk_title">Detail Produk</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="tambah_ke_keranjang">Tambahkan ke Keranjang</string>
    <string name="penilaian_produk">Penilaian Produk</string>
    <string name="lihat_semua_penilaian">Lihat Semua Penilaian</string>
    <string name="belum_ada_penilaian">Belum ada penilaian untuk produk ini.</string>
    <string name="penilaian_produk_title">Penilaian</string>
    <string name="belum_ada_penilaian_full">Produk ini belum memiliki penilaian. Jadilah yang pertama memberikan ulasan!</string>
    <string name="review_image">Gambar Ulasan</string>
    <string name="default_web_client_id">517760925527-dqs00cfma54pktuvjetppf238lmtjvs9.apps.googleusercontent.com</string>
</resources>