<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo2"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/selamat_datang_kembali"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/kami_merindukanmu"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/teal_700"
            android:background="@drawable/edit_text"
            android:hint="@string/email"
            android:textColorHint="@color/teal_700"
            android:inputType="text"
            android:padding="16dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/password"
                android:textColorHint="@color/teal_700"
                android:inputType="textPassword"
                android:textColor="@color/teal_700"
                android:padding="16dp" />

            <ImageView
                android:id="@+id/imageViewTogglePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_visibility_off"
                android:contentDescription="@string/lihat_password" />

        </FrameLayout>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/lupa_password"
            android:textColor="@color/dark_gray" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@null"
            android:background="@drawable/button_yellow"
            android:text="@string/log_in"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/atau_masuk_dengan"
                android:textColor="@color/dark_gray" />

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonGoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@null"
            android:background="@drawable/button_yellow"
            android:text="@string/google"
            android:textColor="@color/black"
            app:icon="@drawable/google"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textViewAkun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:layout_marginRight="10dp"
                android:textColor="@color/dark_gray" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar_sekarang"
                android:textColor="@color/teal_700" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>